locale/zh: update to r6142.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6143 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -1,5 +1,5 @@
 # @lang chinese/zh
-# @revision r6084
+# @revision r6132
 # @translator ryanli(8342420)
 
 # Hints:
@@ -27,6 +27,14 @@ foxtrick.AttVsDef.oldstyle.desc=旧样式
 foxtrick.AttVsDef.newstyle.desc=新样式
 foxtrick.AttVsDef.oldstyleifkseparated.desc=旧样式 (分离的间接定位球)
 foxtrick.Ratings.desc=在比赛页面中添加评级信息
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (详细)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats (分评级显示)
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=通过将以下方括号中的代码输入到书签说明中, 改变与书签相关的图标: 如 [cyan] 会显示一个蓝青色的图标. 可用的值有: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 foxtrick.FoxtrickAlert.AlertSlider.desc=显示提醒通知
 foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=显示 Growl 通知 (仅限于 Mac)
@@ -289,7 +297,7 @@ foxtrick.MatchIncome.desc=在比赛报告中显示比赛收入
 foxtrick.YouthSkillHideUnknown.desc=给青年球员页面留出更多空间
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=在青年球员页面中隐藏未知技能
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=如果启用了球员头像, 隐藏“最高”关键词以获得更多空间
-foxtrick.SkillTable.desc=将球员的技能显示为一个技能表. 建议启用“ExtraPlayerInfo”以显示额外的信息.
+foxtrick.SkillTable.desc=将球员的技能显示为一个技能表.
 foxtrick.SkillTable.OtherTeams.desc=在其他球队的页面上也显示
 foxtrick.HighlightCupwins.desc=在杯赛列表中高亮胜队
 foxtrick.HighlightCupwins.HighlightCupsets.desc=高亮由杯赛排名较低的球队获胜的比赛
@@ -331,6 +339,7 @@ foxtrick.SeriesFlags.Guestbook.desc=在访客留言中显示
 foxtrick.SeriesFlags.Supporters.desc=在球队支持者框中显示
 foxtrick.SeriesFlags.Visitors.desc=在最近访客框中显示
 foxtrick.SeriesFlags.Oldies.desc=在球队培养的球员, 教练页面中显示
+foxtrick.SeriesFlags.CountryOnly.desc=仅显示国旗, 不显示联赛名称
 foxtrick.HTMSPoints.desc=显示 HTMS 技能点 (球员的技能与潜力指标)
 foxtrick.HTMSPoints.AddToPlayer.desc=在球员页面显示
 foxtrick.HTMSPoints.AddToSearchResult.desc=在转会搜索结果页面显示
@@ -588,6 +597,7 @@ Current_league.abbr=联赛
 foxtrick.matchdetail.midfield=中场
 foxtrick.matchdetail.attack=攻击
 foxtrick.matchdetail.defence=防守
+foxtrick.matchdetail.total=总计
 foxtrick.shortcut.matchlineup=阵容
 
 foxtrick.matchdetail.right=右
@@ -653,8 +663,14 @@ foxtrick.tweaks.overview=综述
 foxtrick.tweaks.writeinguestbook=在访客记录留言
 foxtrick.tweaks.copyplayerad=将球员广告复制到剪帖版
 foxtrick.tweaks.copied=已将球员广告复制到剪帖版.
-HatStatsDetailed=HatStats
-HatStatsTotalOnly=HatStats
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 foxtrick.tweaks.copyratings.both=复制比赛评级 (HT-ML 格式)
 foxtrick.tweaks.copyratings.home=复制主队比赛评级 (HT-ML 格式)
 foxtrick.tweaks.copyratings.away=复制客队比赛评级 (HT-ML 格式)
@@ -821,9 +837,10 @@ button.disableAll=禁用全部
 Loading=载入中…
 
 oauth.authorize=授权 FoxTrick 访问你的球队信息
-oauth.instructions=即将打开一个新的页面. 请在该页面上输入你的 Hattrick 用户名与密码以获得一个验证码. 将验证码复制到这里授权 FoxTrick 访问你的球队信息:
+oauth.instructions=即将显示一个到 chpp.hattrick.org 的链接.\n请在该页面上输入你的 Hattrick 用户名与密码以获得一个验证码, 并将其复制到下面的文本框以授权 FoxTrick 访问你的球队信息.\nFoxTrick 在整个过程中不会得知你的密码.
 oauth.success=已成功授权 FoxTrick! 请重载本页面以查看 FoxTrick 提供的更多信息.
-oauth.unauthorized=无法访问到 Hattrick 的数据. 你需要先授权 FoxTrick 访问你的球队数据.
+
+api.failure=无法访问 Hattrick 的数据. 你需要先授权 FoxTrick 访问你的球队数据. 如果你已经授权, 请检查你的网络连接并稍候重试.
 
 # End of IN-GAME STRINGS.
 
@@ -838,6 +855,7 @@ status.active=工作中
 status.enabled=已启用, 但在 %s 上无效
 status.disabled=已禁用
 
+prefs.screenshot=截屏
 foxtrick.prefs.MainTab=主要
 foxtrick.prefs.ShortcutsTab=快捷链接与附加功能
 foxtrick.prefs.PresentationTab=显示调整
