--- a/content/locale/sr/faq.xml
+++ b/content/locale/sr/faq.xml
@@ -14,4 +14,59 @@
 			</xhtml:p>
 		</answer>
 	</item>
+	<item id="authorize">
+		<question>Зашто треба да дозволим Фокстрику приступ подацима о мом тиму?</question>
+		<answer>
+			<xhtml:p>
+				Иако се за већину Фокстрикових функција подаци узимају директно са странице на којој се налазите, неки модули захтевају скидање података са Хеттрика како би радили правилно.
+			</xhtml:p>
+			<xhtml:p>
+				Да би скинуо податке са Хеттрика, укључујући и податке о вашем тиму, лиги, репрезентацији, морате унапред дати дозволу Фокстрику да то и уради.
+			</xhtml:p>
+			<xhtml:p>
+				Фокстрику дајете дозволу тако што у замену за верификациони код на Хеттрик страници за верификацију на адреси: chpp.hattrick.org укуцате своју шифру и лозинку.
+				Фокстрик током читавог овог процеса неће имати увид у вашу лозинку и корисничко име.
+			</xhtml:p>
+			<xhtml:p>
+				Да би сте сазнали више о процесу ауторизације, прочитајте текст <xhtml:a href="http://www.hattrick.org/Community/CHPP/ChppUserDescription.aspx"> CHPP - Како ово ради </xhtml:a> на Хеттрику.
+			</xhtml:p>
+			<xhtml:p>
+				Неки од модула захтевају приступ подацима да би радили правилно:
+			</xhtml:p>
+			<xhtml:ul>
+				<xhtml:li><xhtml:a href="#module=CrossTable">CrossTable</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=ExtraPlayerInfo">ExtraPlayerInfo</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=NtPeek">NtPeek</xhtml:a></xhtml:li>
+			</xhtml:ul>
+			<xhtml:p>
+				А неки модули вам могу пружити и додатне информације, под условом да Фокстрику дозволите приступ подацима на Хеттрику:
+			</xhtml:p>
+			<xhtml:ul>
+				<xhtml:li><xhtml:a href="#module=SkillTable">SkillTable</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=TeamStats">TeamStats</xhtml:a></xhtml:li>
+			</xhtml:ul>
+		</answer>
+	</item>
+	<item id="privacy">
+		<question>Како Фокстрик штити моју приватност?</question>
+		<answer>
+			<xhtml:p>
+				Фокстрик неће прикупљати ни било где аплоудовати ваше личне податке ни подешавања;
+				нити ће на друге сајтове аутоматски прослеђивати било који од ваших личних података,
+				укључујући и име за логовање, лозинку, ИД-ове играча или њихове особине и вештине.
+			</xhtml:p>
+			<xhtml:p>
+				Подаци који се прослеђују другим сајтовима, осим ако је то изричито наведено испод, шаљу се HTTP GET методом, и то само ако ви кликнете на линк ка том алату или сајту.
+			</xhtml:p>
+			<xhtml:p>
+				Уз то, моћићете и да видите све податке који се прослеђују јер ће бити назначени у URI (Uniform Resource Identifier) екстерном линку,
+				и ниједан податак неће бити послат без ваше дозволе.
+				И као што смо горе већ напоменули, ниједан ваш приватни податак неће бити компромитован.
+			</xhtml:p>
+			<xhtml:p>
+				Једини изузетак представљају модули <xhtml:a href="#module=HTMSPoints">HTMS-бодови</xhtml:a> и <xhtml:a href="#module=htmsStatistics">htmsStatistics</xhtml:a>,
+				код којих се вештине играча и меч оцене шаљу на сајт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a>.
+			</xhtml:p>
+		</answer>
+	</item>
 </faq>
