Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6154 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/faq.xml
+++ b/content/locale/sr/faq.xml
@@ -21,14 +21,14 @@
 				Иако се за већину Фокстрикових функција подаци узимају директно са странице на којој се налазите, неки модули захтевају скидање података са Хеттрика како би радили правилно.
 			</xhtml:p>
 			<xhtml:p>
-				Да би скинуо податке са Хеттрика, укључујући и податке о вашем тиму, лиги, репрезентацији, морате унапред дати дозволу Фокстрику да то и уради.
+				Да би скинуо податке са Хеттрика, укључујући и податке о вашем тиму, лиги, репрезентацији итд. морате унапред дати дозволу Фокстрику да то и уради.
 			</xhtml:p>
 			<xhtml:p>
-				Фокстрику дајете дозволу тако што у замену за верификациони код на Хеттрик страници за верификацију на адреси: chpp.hattrick.org укуцате своју шифру и лозинку.
+				Фокстрику дајете дозволу тако што убаците верификациони код који добијате кад укуцате своју шифру и лозинку на Хеттрик страници за верификацију chpp.hattrick.org.
 				Фокстрик током читавог овог процеса неће имати увид у вашу лозинку и корисничко име.
 			</xhtml:p>
 			<xhtml:p>
-				Да би сте сазнали више о процесу ауторизације, прочитајте текст <xhtml:a href="http://www.hattrick.org/Community/CHPP/ChppUserDescription.aspx"> CHPP - Како ово ради </xhtml:a> на Хеттрику.
+				Да би сте сазнали више о процесу ауторизације, прочитајте текст <xhtml:a href="http://www.hattrick.org/Community/CHPP/ChppUserDescription.aspx">CHPP - Како ово ради</xhtml:a> на Хеттрику.
 			</xhtml:p>
 			<xhtml:p>
 				Неки од модула захтевају приступ подацима да би радили правилно:
@@ -39,7 +39,7 @@
 				<xhtml:li><xhtml:a href="#module=NtPeek">NtPeek</xhtml:a></xhtml:li>
 			</xhtml:ul>
 			<xhtml:p>
-				А неки модули вам могу пружити и додатне информације, под условом да Фокстрику дозволите приступ подацима на Хеттрику:
+				А неки модули вам могу пружити и додатне информације, под условом да Фокстрику дозволите приступ подацима cа Хеттрикa:
 			</xhtml:p>
 			<xhtml:ul>
 				<xhtml:li><xhtml:a href="#module=SkillTable">SkillTable</xhtml:a></xhtml:li>
@@ -56,10 +56,10 @@
 				укључујући и име за логовање, лозинку, ИД-ове играча или њихове особине и вештине.
 			</xhtml:p>
 			<xhtml:p>
-				Подаци који се прослеђују другим сајтовима, осим ако је то изричито наведено испод, шаљу се HTTP GET методом, и то само ако ви кликнете на линк ка том алату или сајту.
+				Подаци који се прослеђују другим сајтовима, осим ако је то изричито наведено испод, шаљу се 'HTTP GET' методом, и то само ако ви кликнете на линк ка том алату или сајту.
 			</xhtml:p>
 			<xhtml:p>
-				Уз то, моћићете и да видите све податке који се прослеђују јер ће бити назначени у URI (Uniform Resource Identifier) екстерном линку,
+				Уз то, моћићете и да видите све податке који се прослеђују јер ће бити назначени у 'URI' (Uniform Resource Identifier) екстерном линку,
 				и ниједан податак неће бити послат без ваше дозволе.
 				И као што смо горе већ напоменули, ниједан ваш приватни податак неће бити компромитован.
 			</xhtml:p>
