locale/zh: update to r6157.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6159 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -1,5 +1,5 @@
 # @lang chinese/zh
-# @revision r6132
+# @revision r6157
 # @translator ryanli(8342420)
 
 # Hints:
@@ -650,9 +650,6 @@ foxtrick.onpagepreferences=FoxTrick 页面设置
 foxtrick.modules_allpages=在所有页面上运行的模块
 HTLanguageChanged=FoxTrick 检查到语言变化, FoxTrick 的语言现在被设为 %s.
 
-StyleTutorial.title=自定义 FoxTrick 样式
-StyleTutorial.content=FoxTrick 给用户提供一系列接口以自定义 FoxTrick 的样式.\n这些接口通过 HTML 的 ID 与 class 提供, 你可以使用 CSS 来编写自己喜欢的样式.\n在 %s 有一个样例样式表, 你可以对其进行更改以满足自己的需求.\n如果链接不可用, 请将其复制到浏览器地址栏中. 在将样式表保存为文件后, 你可以通过 SkinPlugin 模块载入该 CSS 文件以启用该用户样式表.
-
 Coach=教练
 
 # NOTE TO TRANSLATORS
@@ -838,9 +835,12 @@ Loading=载入中…
 
 oauth.authorize=授权 FoxTrick 访问你的球队信息
 oauth.instructions=即将显示一个到 chpp.hattrick.org 的链接.\n请在该页面上输入你的 Hattrick 用户名与密码以获得一个验证码, 并将其复制到下面的文本框以授权 FoxTrick 访问你的球队信息.\nFoxTrick 在整个过程中不会得知你的密码.
+oauth.why=为什么我要授权 FoxTrick?
 oauth.success=已成功授权 FoxTrick! 请重载本页面以查看 FoxTrick 提供的更多信息.
 
 api.failure=无法访问 Hattrick 的数据. 你需要先授权 FoxTrick 访问你的球队数据. 如果你已经授权, 请检查你的网络连接并稍候重试.
+
+exception.error=错误 %s
 
 # End of IN-GAME STRINGS.
 
