locale/zh: update to r6162.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6163 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -1,5 +1,5 @@
 # @lang chinese/zh
-# @revision r6157
+# @revision r6162
 # @translator ryanli(8342420)
 
 # Hints:
@@ -836,6 +836,7 @@ Loading=载入中…
 oauth.authorize=授权 FoxTrick 访问你的球队信息
 oauth.instructions=即将显示一个到 chpp.hattrick.org 的链接.\n请在该页面上输入你的 Hattrick 用户名与密码以获得一个验证码, 并将其复制到下面的文本框以授权 FoxTrick 访问你的球队信息.\nFoxTrick 在整个过程中不会得知你的密码.
 oauth.why=为什么我要授权 FoxTrick?
+oauth.link=到 chpp.hattrick.org 上获取验证码
 oauth.success=已成功授权 FoxTrick! 请重载本页面以查看 FoxTrick 提供的更多信息.
 
 api.failure=无法访问 Hattrick 的数据. 你需要先授权 FoxTrick 访问你的球队数据. 如果你已经授权, 请检查你的网络连接并稍候重试.
