fa/htlang.xml: update.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6164 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fa/htlang.xml
+++ b/content/locale/fa/htlang.xml
@@ -1,10 +1,10 @@
 <language name="fa" desc="فارسی">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection -->
-	<MyHattrick value="هت‌‌تریک من" />
+	<MyHattrick value="هت&#8204;&#8204;تریک من" />
 	<MyClub value="باشگاه من" />
-	<World value="بین‌‌المللی" />
-	<Forum value="انجمن‌‌ها" />
+	<World value="جهان" />
+	<Forum value="انجمن&#8204;&#8204;ها" />
 	<Shop value="فروشگاه" />
 	<Help value="راهنمایی" />
 
