Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6165 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -874,8 +874,11 @@ button.authorize=Дозволи
 Loading=Учитавање у току…
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
 oauth.instructions=Ускоро ће вам се појавити линк ка страници чија адреса почиње са "chpp.hattrick.org". Молимо вас да отворите ту страницу и унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). Потом у поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму.
+oauth.why=Зашто треба да дозволим Фокстрику приступ подацима о мом тиму?
+oauth.link=Преузмите ваш верификациони код са Хеттрик сервера (chpp.hattrick.org)
 oauth.success=Фокстрик је добио вашу дозволу за приступ! Молимо вас да освежите ову страницу да би видели додатне информације и функције које вам Фокстрик пружа.
 api.failure=Дозвола за приступ подацима на Хеттрику није активна. Морате прво дозволити Фокстрику да приступи подацими о вашем тиму. Уколико сте већ дали доѕволу, проверите да ли сте повезани на интернет или покушајте поново касније.
+exception.error=Дошло је до грешке: %s
 
 # End of IN-GAME STRINGS.
 
