Russian translation update up to r6170
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6171 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/faq.xml
+++ b/content/locale/ru/faq.xml
@@ -18,7 +18,7 @@
 		<question>Зачем мне авторизовать FoxTrick для доступа к данным моей команды?</question>
 		<answer>
 			<xhtml:p>
-				Хотя бо́льшая часть данных, нужных FoxTrick-у, и может быть получена напрямую со страницы, которую Вы просматриваете, некоторые модули требуют загрузки дополнительных данных Hattrick-а для корректной работы.
+				Несмотря на то, что бо́льшая часть данных, нужных FoxTrick-у, и может быть получена напрямую со страницы, которую Вы просматриваете, некоторые модули требуют загрузки дополнительных данных Hattrick-а для корректной работы.
 			</xhtml:p>
 			<xhtml:p>
 				Для загрузки данных Hattrick-а, включая данные Вашей собственной команды, лиги и национальных сборных, Вам нужна заранее авторизовать FoxTrick.
