--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r6144
+# based on MASTER language file r6170
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -835,9 +835,13 @@ Loading=Загрузка…
 
 oauth.authorize=Авторизовать FoxTrick для доступа к данным Вашей команды
 oauth.instructions=Вскоре появится сыллка на страницу chpp.hattrick.org.\nОткройте ссылку и введите свои имя и пароль к Hattrick'у для получения кода потверждения. Скопируйте полученный код в поле ниже для авторизации FoxTrick для получения данных Вашей команды.\nFoxTrick не будет знать Вашего пароля в течение всего процесса.
+oauth.why=Зачем авторизовывать FoxTrick?
+oauth.link=Получить код подтверждения с сайта chpp.hattrick.org
 oauth.success=FoxTrick был успешно авторизован! Пожалуйста, перезагрузите эту страницу для отображения дополнительной информации, предоставляемой FoxTrick.
 
 api.failure=Ошибка доступа к данным Hattrick. Вам нужно авторизовать FoxTrick для доступа к данным. Если Вы сделали это, проверьте работу сети или попробуйте повторить попытку позже.
+
+exception.error=Ошибка %s
 
 # End of IN-GAME STRINGS.
 
