--- a/content/locale/ar/htlang.xml
+++ b/content/locale/ar/htlang.xml
@@ -1,4 +1,4 @@
-<language name="ar" desc="Arabic">
+<language name="ar" desc="العربية">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="هاتريك الشخصي" />
