Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6204 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -16,20 +16,20 @@
 <note version="0.6">
 <item>Нови интерфејс за подешавања. (ryanli)</item>
 <item>OAuth интерфејс за нов систем ауторизације (Hattrick CHPP API). (ryanli)</item>
-<item>Mодул<module>LiveAlert</module> за обавештења о головима на мечевима које пратите у HT Live. (ryanli)</item>
+<item>Mодул <module>LiveAlert</module> за обавештења о головима на мечевима које пратите у HT Live. (ryanli)</item>
 <item><module>OldStyleFace</module> модул за приказивење слика играча и менаџера у старом ХТ стилу.(Aimo_Kanuuna)</item>
-<item><module>NtPeek</module> за преглед мечева репрезентација на страници Мој Хеттрик.(ryanli)</item>
-<item><module>SeriesFlags</module> модул за приказивање заставице и лиге корисника уписаних у књигу гостију. Заставице обетбедио<xhtml:a href="http://www.fantamondi.it/HTMS/">HTMS</xhtml:a>. (taised, ryanli)</item>
-<item>ж<module>HTMS-бодови</module> за приказивање вештина и потенцијала за тренинг играча<xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=nt&amp;lang=en">HTMS Бодови</xhtml:a>(taised)</item>
+<item><module>NtPeek</module> за преглед мечева репрезентација на страници 'Мој Хеттрик'.(ryanli)</item>
+<item><module>SeriesFlags</module> модул за приказивање заставице и лиге корисника уписаних у књигу гостију. Заставице обезбедио сајт <xhtml:a href="http://www.fantamondi.it/HTMS/">HTMS</xhtml:a>. (taised, ryanli)</item>
+<item><module>HTMS-бодови</module> за приказивање вештина и потенцијала за тренинг играча<xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=nt&amp;lang=en">HTMS Бодови</xhtml:a>(taised)</item>
 <item><module>FriendlyInterface</module> модул са опцијама за приказивање пуног имена играча на страници поставе и приказивање линкова ка националном тиму код репрезентативаца. (ryanli)</item>
 <item>Mодул HighlightBotTeams преименован у <module>HighlightOwnerless</module>. (ryanli)</item>
 <item>Обрисани модули YouthSkillNotes и ShortPA. (ryanli)</item>
 <item>Опција за не приказивање 'Провири на форум' на страници лиге и државе у модулу <module>FixcssProblems</module>. (ljushaff)</item>
-<item>Опција за копирање играча у старом стилу (без табеле) у модулу<module>CopyPlayerAd</module>. (ryanli)</item>
+<item>Опција за копирање играча у старом стилу (без табеле) у модулу <module>CopyPlayerAd</module>. (ryanli)</item>
 <item>Белоруски језик. (LA-Stolik)</item>
 <item>Опција која приказује HatStats за сваки део терена у <module>Ratings</module> модулу. (taised)</item>
 <item>Нова иконица за линк "Пријави поруку модераторима". (ljushaff)</item>
-<item><module>YouthPromotes</module> модул сада приказује и најранији дату за промоцију играча. (ryanli)</item>
+<item><module>YouthPromotes</module> модул сада приказује и најранији датум за промоцију играча. (ryanli)</item>
 <item>Већина функција ради и у Google Chrome. (ryanli)</item>
 <item>Мање исправке за најновије промене на Хеттрику. (ryanli, taised, ljushaff)</item>
 <item>Опције за радио у модулу<module>ExtraShortcuts</module> су искључене у стандардним подешавањима. (ryanli)</item>
