--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -833,7 +833,7 @@ button.disableAll=Alles deaktivieren
 Loading=Lade…
 
 oauth.authorize=Authorisiere FoxTrick den Zugriff auf deine Teamdaten
-oauth.instructions=Ein Link zu chpp.hattrick.org wird in Kürze erscheinen.\nÖffne den Link, Trage deinen Nutzernamen und Passwort ein um einen Bestätigungscode zu erhalten. Kopiere den Code in die untenstehende Zeile um FoxTrick den Zugriff auf deine Teamdaten zu erlauben.\nFoxTrick wird während des gesamten Prozesses dein Passwort kennen.
+oauth.instructions=Ein Link zu chpp.hattrick.org wird in Kürze erscheinen.\nÖffne den Link, Trage deinen Nutzernamen und Passwort ein um einen Bestätigungscode zu erhalten. Kopiere den Code in die untenstehende Zeile um FoxTrick den Zugriff auf deine Teamdaten zu erlauben.\nFoxTrick wird während des gesamten Prozesses dein Passwort NICHT erfahren.
 oauth.why=Warum soll ich FoxTrick authorisieren?
 oauth.link=Erhalte den Bestätigungscode von chpp.hattrick.org
 oauth.success=FoxTrick wurde erfolgreich authorisiert! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
