Arab locale init
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6211 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -11,44 +11,44 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=Add a shortcut to lineup on player's match history
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=Highlight player in the lineup with a yellow color when coming to the lineup page using shortcut, replacing HT highlighting.
-foxtrick.SmallerPages.desc=Reduces the dimension of some pages to adapt to small screens
-foxtrick.SmallerPages.ReduceBid.desc=Move the bid beside the skills and cut all strings leaving only numbers (like current bid and time)
-foxtrick.ForumTemplates.desc=Allows turning forum posts into templates for later use (Also works for mails, tickets and Guestbook, editors)
-foxtrick.ForumTemplates.DefaultShow.desc=Shows or hides your templates by default
-foxtrick.ForumTemplates.CustomWidth.desc=Use custom width for display of template titles (default 125(px))
-foxtrick.ForumPreview.desc=Allows showing a post preview (Also works for mails, tickets, ads and guestbook)
-foxtrick.AddLeaveConfButton.desc=Adds a 'Leave forum' button to each forum folder
-foxtrick.StarsCounter.desc=Adds the total number of stars to the match lineup page
-foxtrick.MoveLinks.desc=Moves the manager's series and flag links to the message header. Note: the 'Show avatars and info' function in Hattrick must be switched on for this to work!
-foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
-foxtrick.AttVsDef.oldstyle.desc=old style
-foxtrick.AttVsDef.newstyle.desc=new style
-foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
-foxtrick.Ratings.desc=Adds ratings to the match page
-foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
-foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
+foxtrick.FoxtrickLineupShortcut.desc=إضافة إختصار إلى التشكيلة في تاريخ مباريات اللاعب
+foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=التظليل على اللاعب في التشكيلة باللون الأصفر عند الولوج إلى صفحة التشكيلة بإستخدام الإختصار وإستبدال تظليل هاتريك.
+foxtrick.SmallerPages.desc=يقوم بتصغير أبعاد بعض الصفحات لتوافق الشاشات الصغيرة
+foxtrick.SmallerPages.ReduceBid.desc=نقل المزايدة بجانب المهارات وقص كل الأحرف للإبقاء على الأرقام فقط (كالمزايدة الحالية والوقت)
+foxtrick.ForumTemplates.desc=يسمح بتغيير رسائل المنتدى إلى قوالب للإستخدام فيما بعد (يعمل أيضا في الرسائل البريدية والتذاكر الإشرافية ومحرري سجل الزوار
+foxtrick.ForumTemplates.DefaultShow.desc=يظهر أو يخفي القوالب الخاصة بك بشكل إفتراضي
+foxtrick.ForumTemplates.CustomWidth.desc=يستخدم عرض مخصص لعرض عنواين القوالب (الإفتراضي 125 بكسل)
+foxtrick.ForumPreview.desc=يسمح بإظهار عرض لرسالة (يعمل أيضا في الرسائل البريدية والتذاكر الإشرافية والإعلانات وسجل الزوار)
+foxtrick.AddLeaveConfButton.desc=يقوم بإضافة زر 'ترك منتدى' لكل مجلدات المنتديات
+foxtrick.StarsCounter.desc=يقوم بإضافة العدد الكلي للنجوم لصفحة تشكيلة المباراة
+foxtrick.MoveLinks.desc=يقوم بتحريك دوري المدير وروابط العلم إلى تبويب الرسالة. ملاحظة: وظيفة 'إظهار الصور الرمزية والمعلومات' في هاتريك لابد أن تكون مفعلة ليحدث هذا التحريك!
+foxtrick.AttVsDef.desc=يقوم بإضافة مقارنة بين الهجوم و الدفاع إلى صفحة المباراة
+foxtrick.AttVsDef.oldstyle.desc=النمط القديم
+foxtrick.AttVsDef.newstyle.desc=النمط الجديد
+foxtrick.AttVsDef.oldstyleifkseparated.desc=النمط القديم (تحديد منفصل للركلات الثابتة)
+foxtrick.Ratings.desc=يقوم بإضافة تقييمات إلى صفحة المباراة
+foxtrick.Ratings.HatStats.desc=إحصائيات HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (مفصلة)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats منفصلة لكل تقييم
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats=VnukStats
 foxtrick.Ratings.HTitaVal=HTitaVal
 foxtrick.Ratings.GardierStats=GardierStats
-foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
-foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
-foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
-foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Show growl notification (Mac only)
-foxtrick.FoxtrickAlert.AlertSound.desc=Play alert sound
-foxtrick.FoxtrickAlert.NewMail.desc=Displays a pop-up notification for new mails to you (non-supporter)
-foxtrick.FoxtrickAlert.NewForum.desc=Displays a pop-up notification for new forum messages to you (non-supporter)
-foxtrick.AlertCustomSounds.desc=Custom sounds for alerts. Unchecked sounds play default sound. Enabled sounds with empty fields don't play a sound.
-foxtrick.AlertCustomSounds.LoginWelcome.desc=Login welcome
-foxtrick.AlertCustomSounds.LoginSupporters.desc=Supported team logins
-foxtrick.AlertCustomSounds.ForumReplyToMe.desc=Forum reply to me
-foxtrick.AlertCustomSounds.TransferMarket.desc=Transfer market
-foxtrick.AlertCustomSounds.Challenges.desc=Challenges
-foxtrick.AlertCustomSounds.Guestbook.desc=Guestbook
+foxtrick.BookmarkAdjust.desc=تغيير الأيقونة المرتبطة إلى أحد العلامات في التعليق على العلامة بين قوسين مثل [سماوي] سوف يظهر اللون السماوي. بقية القيم المتاحة هي: أكوا وباء وأسود وأزرق وبني وسماوي وبنفسجي غامق وأخضر وفكري وأزرق فاتح وأخضر فاتح وبرتقالي ووردي وبنفسجي وأحمر وأبيض وأصفر
+foxtrick.FoxtrickAlert.desc=يقوم بعرض إطار منبذق تنبيهي مع أحداث شريط أخبار هاتريك حتى عندما تكون بصدد فعل شئ آخر في نفس اللحظة (أيضا يقوم بتشغيل صوت في أحداث الشريط)
+foxtrick.FoxtrickAlert.AlertSlider.desc=إظهار تنبيه منزلق
+foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=إظهار تنبيه growl (يعمل على ماك فقط)
+foxtrick.FoxtrickAlert.AlertSound.desc=تشغيل صوت تنبيهي
+foxtrick.FoxtrickAlert.NewMail.desc=تشغيل تنبيه في إطار منبثق للرسائل البريدية الجديدة (لغير الداعمين)
+foxtrick.FoxtrickAlert.NewForum.desc=تشغيل تنبيه في إطار منبثق لرسائل المنتدى الجديدة (لغير الداعمين)
+foxtrick.AlertCustomSounds.desc=صوت مخصص للتنبيهات. الأصوات غير المسموعة تشغل بأصوات إفتراضية. الأصوات الممكنة ولكن بحقول فارغة لن تعمل.
+foxtrick.AlertCustomSounds.LoginWelcome.desc=الترحيب عند تسجيل الدخول
+foxtrick.AlertCustomSounds.LoginSupporters.desc=تسجيل دخول الفرق التي تشجعها
+foxtrick.AlertCustomSounds.ForumReplyToMe.desc=رد في المنتدى موجه إلي
+foxtrick.AlertCustomSounds.TransferMarket.desc=سوق الإنتقالات
+foxtrick.AlertCustomSounds.Challenges.desc=التحديات
+foxtrick.AlertCustomSounds.Guestbook.desc=سجل الزوار
 foxtrick.AlertCustomSounds.MailToMe.desc=Mail to me
 foxtrick.AlertCustomSounds.MyHTMessages.desc=MyHT messages
 foxtrick.AlertCustomOff.desc=Custom turning off selected alerts. Checked options don't show alert slider and don't play a sound
