es_ca/foxtrick.properties: apply patch from joseant.mg. (#710)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6213 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -632,7 +632,7 @@ foxtrick.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 foxtrick.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
-ntpeek.title=Partiodos recientes de la Selección
+ntpeek.title=Partidos recientes de la Selección
 
 htLive=HT Live
 
