NTPeak - custom country ID
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6217 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -333,6 +333,7 @@ foxtrick.TableSort.desc=Macht alle 'richtigen' Tabellen mit Kopfzeile in Hattric
 foxtrick.LiveAlert.desc=HT Live Toralarm
 foxtrick.OldStyleFace.desc=Anzeige der Gesichter im alten HT style
 foxtrick.NtPeek.desc=Anzeige von NT/U20 Spielen auf der Länderseite und bei Mein Hattrick
+foxtrick.NtPeek.CustomID.desc=Auswahl einer eigenen Länder-ID um Spiele anderer Nationalmannschaften zu sehen
 foxtrick.SeriesFlags.desc=Anzeige des Liga-Icons bei User- und/oder Team-Links (Icons von HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Anzeige im Gästebuch
 foxtrick.SeriesFlags.Supporters.desc=Anzeige in der Supporter-Liste eines Teams
