German locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6246 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -333,12 +333,10 @@ foxtrick.TableSort.desc=Macht alle 'richtigen' Tabellen mit Kopfzeile in Hattric
 foxtrick.LiveAlert.desc=HT Live Toralarm
 foxtrick.OldStyleFace.desc=Anzeige der Gesichter im alten HT style
 foxtrick.NtPeek.desc=Anzeige von NT/U20 Spielen auf der Länderseite und bei Mein Hattrick
-foxtrick.NtPeek.CustomID.desc=Auswahl einer eigenen Länder-ID um Spiele anderer Nationalmannschaften zu sehen
 foxtrick.SeriesFlags.desc=Anzeige des Liga-Icons bei User- und/oder Team-Links (Icons von HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Anzeige im Gästebuch
 foxtrick.SeriesFlags.Supporters.desc=Anzeige in der Supporter-Liste eines Teams
 foxtrick.SeriesFlags.Visitors.desc=Anzeige in der letzte Besucher-Liste eines Teams
-foxtrick.SeriesFlags.Oldies.desc=Anzeige in der Liste der ehemaligen Spieler und Trainer eines Teams
 foxtrick.SeriesFlags.CountryOnly.desc=Anzeige der Länderflagge ohne Liga-Level
 foxtrick.HTMSPoints.desc=Anzeige der Trainingspunkte für einen Spieler laut HTMS-Skill-Tabelle
 foxtrick.HTMSPoints.AddToPlayer.desc=Anzeige auf der Spieler-Seite
@@ -348,6 +346,8 @@ foxtrick.FriendlyInterface.desc=Bereitstellen eines freundlicheren Nutzerinterfa
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Anzeige der Spielernamen ohne Ellipse auf der Aufstellungsseite
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Anzeige der Nationalmannschaften als Links bei Nationalspielern
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Verberge den 'Antwort verfassen'-Link im Gästebuch
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Verberge die Sekretärin, wenn sie nichts zu sagen hat
+foxtrick.MyMonitor.desc=Beobachte aktuelle Spiele von Freunden und Gegnern unter 'Mein Hattrick'
 # -----------------------------------------------------------------------------
 
 
@@ -400,7 +400,7 @@ foxtrick.seasonstats.draw=U
 foxtrick.seasonstats.lost=N
 foxtrick.seasonstats.goalplus=T+
 foxtrick.seasonstats.goalminus=T-
-foxtrick.seasonstats.goaldiff=±
+foxtrick.seasonstats.goaldiff=Â±
 foxtrick.seasonstats.total=Ges
 foxtrick.seasonstats.home=H
 foxtrick.seasonstats.away=A
@@ -811,6 +811,12 @@ CrossTable.graph=Saisonverlauf
 CrossTable.table=Kreuztabelle
 # will be shown as "R13" denoting round 13
 CrossTable.round=R%s
+CrossTable.noMatches=Bisher wurden noch keine Spiele ausgetragen.
+
+# MyMonitor
+MyMonitor.header=Meine Beobachtungen
+MyMonitor.inputTeamId=Eingabe der ID, des Teams, welches du beobachten willst:
+MyMonitor.removeTeam=Auswahl des zu entfernenden Teams:
 
 #actions
 Copy=Kopieren
@@ -825,21 +831,23 @@ button.close=Schliessen
 button.customize=Anpassen
 button.save=Speichern
 button.go=Los!
-button.authorize=Authorisiere
+button.add=Hinzufügen
+button.remove=Entfernen
+button.authorize=Autorisieren
 button.export=Exportiere
 button.import=Importiere
 button.restoreDefault=Standard wiederherstellen
 button.disableAll=Alles deaktivieren
 
-Loading=Lade…
+Loading=Ladeâ€¦
 
 oauth.authorize=Authorisiere FoxTrick den Zugriff auf deine Teamdaten
 oauth.instructions=Ein Link zu chpp.hattrick.org wird in Kürze erscheinen.\nÖffne den Link, Trage deinen Nutzernamen und Passwort ein um einen Bestätigungscode zu erhalten. Kopiere den Code in die untenstehende Zeile um FoxTrick den Zugriff auf deine Teamdaten zu erlauben.\nFoxTrick wird während des gesamten Prozesses dein Passwort NICHT erfahren.
 oauth.why=Warum soll ich FoxTrick authorisieren?
 oauth.link=Erhalte den Bestätigungscode von chpp.hattrick.org
-oauth.success=FoxTrick wurde erfolgreich authorisiert! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
+oauth.success=FoxTrick wurde erfolgreich autorisiert! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
 
-api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick authorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
+api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
 
 exception.error=Fehler %s
 
