--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -681,7 +681,7 @@ Coach=Antrenor
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Actiuni
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
-foxtrick.tweaks.overview=Mai multe informatii
+foxtrick.tweaks.overview=Lista jucătorilor
 foxtrick.tweaks.writeinguestbook=Scrie in Cartea de Oaspeti
 foxtrick.tweaks.copyplayerad=Copiaza jucatorul in clipboard
 foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
