German locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6251 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -400,7 +400,7 @@ foxtrick.seasonstats.draw=U
 foxtrick.seasonstats.lost=N
 foxtrick.seasonstats.goalplus=T+
 foxtrick.seasonstats.goalminus=T-
-foxtrick.seasonstats.goaldiff=Â±
+foxtrick.seasonstats.goaldiff=±
 foxtrick.seasonstats.total=Ges
 foxtrick.seasonstats.home=H
 foxtrick.seasonstats.away=A
@@ -839,7 +839,7 @@ button.import=Importiere
 button.restoreDefault=Standard wiederherstellen
 button.disableAll=Alles deaktivieren
 
-Loading=Ladeâ€¦
+Loading=Lade…
 
 oauth.authorize=Authorisiere FoxTrick den Zugriff auf deine Teamdaten
 oauth.instructions=Ein Link zu chpp.hattrick.org wird in Kürze erscheinen.\nÖffne den Link, Trage deinen Nutzernamen und Passwort ein um einen Bestätigungscode zu erhalten. Kopiere den Code in die untenstehende Zeile um FoxTrick den Zugriff auf deine Teamdaten zu erlauben.\nFoxTrick wird während des gesamten Prozesses dein Passwort NICHT erfahren.
