Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6254 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/faq.xml
+++ b/content/locale/sr/faq.xml
@@ -36,7 +36,9 @@
 			<xhtml:ul>
 				<xhtml:li><xhtml:a href="#module=CrossTable">CrossTable</xhtml:a></xhtml:li>
 				<xhtml:li><xhtml:a href="#module=ExtraPlayerInfo">ExtraPlayerInfo</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=MyMonitor">MyMonitor</xhtml:a></xhtml:li>
 				<xhtml:li><xhtml:a href="#module=NtPeek">NtPeek</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=SeriesFlags">SeriesFlags</xhtml:a></xhtml:li>
 			</xhtml:ul>
 			<xhtml:p>
 				А неки модули вам могу пружити и додатне информације, под условом да Фокстрику дозволите приступ подацима cа Хеттрикa:
